# rust-chat

./: Cargo.toml  readme.md
src/libs/: client_lib.rs  client_rw.rs  mod.rs
statics/: client_style.css
