[package]
name = "tokio_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0",  features = ["full", "tracing"] }
tokio-util = { version = "0.7.0",  features = ["full"] }
tokio-stream = { version = "0.1"}
dioxus = { version = "0.5.1", features = ["desktop"] }
dioxus-desktop = { version = "0.5.0" }
dioxus-signals = { version = "0.5.0"}
lazy_static = "1.4.0"
dioxus-hot-reload = { version = "0.5.0", features = ["file_watcher", "dioxus-html"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }

[lib]
name = "client_mod"
path = "src/libs/mod.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
